style: fix champion name overflow

--- a/src/app/components/champions/champion-details/champion-details.component.scss
+++ b/src/app/components/champions/champion-details/champion-details.component.scss
@@ -26,6 +26,7 @@
 
 .champion-name {
   position: absolute;
+  width: 100%;
   top: -100px;
   left: 0;
   h1 {
@@ -49,11 +50,6 @@
   h3 {
     font-size: 1.4rem;
     margin-bottom: 1rem;
-    position: absolute;
-    top: -15px;
-    background-color: $dark-blue;
-    left: 50%;
-    transform: translateX(-50%);
   }
   h4 {
     font-size: 1rem;
@@ -63,19 +59,11 @@
 }
 
 .champion-difficulty {
-  h3 {
-    width: 80%;
-  }
   h4 {
     font-size: 22px;
   }
   span {
     color: $red;
-  }
-}
-.champion-role {
-  h3 {
-    width: 50%;
   }
 }
 
